# Product_Shopping_MarketPlace

./: .gitignore  CMakeLists.txt  Plan.md  README.md  requirements.txt  setup.py
configs/: default.yaml
csrc/: bindings.cpp
csrc/kernels/: fused_conv2d.cu  fused_conv2d.h  fused_linear_relu.cu  fused_linear_relu.h  mixed_precision_gemm.cu  mixed_precision_gemm.h
csrc/loss_scaling/: dynamic_loss_scaler.cu  dynamic_loss_scaler.h
csrc/utils/: cuda_utils.h  precision_cast.cu  precision_cast.h
mixed_precision/: __init__.py
mixed_precision/data/: __init__.py  augmentation.py  cifar100.py
mixed_precision/kernels/: __init__.py  custom_matmul.py  fused_ops.py  jax_primitives.py
mixed_precision/models/: __init__.py  resnet.py  resnet_mixed.py
mixed_precision/training/: __init__.py  loss_scaling.py  master_weights.py  trainer_fp32.py  trainer_mixed.py
mixed_precision/utils/: __init__.py  metrics.py  profiling.py
scripts/: benchmark.py  compare_results.py  profile.py  train_baseline.py  train_mixed_precision.py
tests/: test_fused_ops.py  test_gemm_correctness.py  test_jax_integration.py  test_loss_scaling.py  test_precision_casting.py
